[metadata]
description-file = README.md

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./edapy --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term --flake8 --ignore=docs/ --durations=3 --black
doctest_encoding = utf-8
mccabe-complexity=12

[pydocstyle]
convention=numpy
match_dir = mpu

[flake8]
exclude = tests/
ignore = H301, H306, H404, H405, W503, E501, E203, D413

[mutmut]
backup=False
runner=python3 -m pytest
tests_dir=tests/
