[metadata]
name = edapy

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.2.3

description = A tookit for exploratoriy data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = EDA, Data Science

platforms = Linux

url = https://github.com/MartinThoma/edapy
download_url = https://github.com/MartinThoma/edapy

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >= 3.0

[options.entry_points]
console_scripts =
    hwrt = edapy.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./edapy --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term --flake8 --ignore=docs/ --durations=3 --black
doctest_encoding = utf-8
mccabe-complexity=12

[pydocstyle]
convention=numpy
match_dir = mpu

[flake8]
exclude = tests/
ignore = H301, H306, H404, H405, W503, E501, E203, D413

[mutmut]
backup=False
runner=python3 -m pytest
tests_dir=tests/

[coverage:run]
parallel=true
